# laserTower

./: README.md  how_to.txt
docs/src/: contents.tex  frontpage.tex  memoria_pic.tex
parts/: adaptador.stl  base.stl  bracket.stl  lasertower.scad  pan.stl
programming/: CMakeLists.txt
programming/src/: CMakeLists.txt
programming/src/apps/: CMakeLists.txt  yes_we_can.cpp  yes_we_can_hsv.cpp
programming/src/libraries/: CMakeLists.txt
programming/src/libraries/FaceDetector/: CMakeLists.txt  facedetector.cpp  facedetector.hpp
programming/src/libraries/Turret/: CMakeLists.txt  turret.cpp  turret.hpp
programming/src/libraries/color_detector/: CMakeLists.txt  color_detector.cpp  color_detector.h
programming/src/libraries/debug/: debug.h
programming/src/libraries/webcam/: CMakeLists.txt  webcam.cpp  webcam.h
programming/src/test/: CMakeLists.txt  CMakeLists.txt~  conf_hsv.cpp  test_FaceDetector.cpp  test_Turret.cpp  test_boxes.cpp  test_control_loop.cpp  test_hsv_can.cpp  test_rgb_can.cpp  test_webcam.cpp
